--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -47,6 +47,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
 <link rel="import" href="../bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="../bower_components/paper-tooltip/paper-tooltip.html">
 
 <!-- Neon Elements -->
 <link rel="import" href="../bower_components/neon-animation/animations/scale-up-animation.html">
