--- a/app/elements/key-item-element.html
+++ b/app/elements/key-item-element.html
@@ -27,7 +27,7 @@
 
     <paper-item on-tap="_viewKey" class="info-item flex-horizontal-with-ratios">
       <div class="flexchild">
-        <paper-checkbox checked="{{selected}}" on-tap="_selectKey">[[key.id]]</paper-checkbox>
+        <paper-checkbox checked="{{selected}}" on-tap="_selectKey"></paper-checkbox> [[key.id]]
       </div>
       <div class="flexchild">[[isDefaultText]]</div>
     </paper-item>
@@ -57,11 +57,12 @@
         listeners: {
           'selected-changed': '_selectKeyChanged'
         },
-        ready: function() {
-
+        _computeIsDefaultText: function(isDefault) {
+          return isDefault ? 'Default' : null;
         },
         _selectKeyChanged: function(e) {
           var selected = e.detail.value;
+          console.log(selected);
           this.fire('toggleSelectedKey', {
             key: this.key,
             selected: selected
@@ -73,9 +74,6 @@
         _selectKey: function(e) {
           // This is used to prevent event bubbling
           e.stopPropagation();
-        },
-        _computeIsDefaultText: function(isDefault) {
-          return isDefault ? 'Default' : null;
         }
       });
     })();
