--- a/app/elements/keys-list-element.html
+++ b/app/elements/keys-list-element.html
@@ -23,27 +23,43 @@
       .flexchild {
         @apply(--layout-flex);
       }
+
+      .info-head > * {
+        font-weight: 700;
+        padding: 8px 0;
+      }
     </style>
 
     <paper-card heading="Keys">
       <div hidden$="[[!hasKeys]]" class="card-options">
-        <paper-icon-button icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
+        <paper-tooltip for="searchKeyBtn" position="top">Toggle Search</paper-tooltip>
+        <paper-icon-button id="searchKeyBtn" icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
         <paper-input hidden$="[[!showSearchOption]]" type="search" value="{{searchTerm}}" placeholder="Search..." no-label-float class="search"></paper-input>
-        <paper-icon-button hidden$="[[!showMakeDefaultOption]]" on-tap="_starSelected" icon="star-border"></paper-icon-button>
-        <paper-icon-button hidden$="[[!showEditOption]]" on-tap="_editSelected" icon="image:edit"></paper-icon-button>
-        <paper-icon-button hidden$="[[!showDeleteOption]]" on-tap="_deleteSelected" icon="delete"></paper-icon-button>
+
+        <paper-tooltip for="makeDefaultKeyBtn" position="top">Make Default</paper-tooltip>
+        <paper-icon-button id="makeDefaultKeyBtn" hidden$="[[!showMakeDefaultOption]]" on-tap="_starSelected" icon="star-border"></paper-icon-button>
+
+        <paper-tooltip for="editKeyBtn" position="top">Rename</paper-tooltip>
+        <paper-icon-button id="editKeyBtn" hidden$="[[!showEditOption]]" on-tap="_editSelected" icon="image:edit"></paper-icon-button>
+
+        <paper-tooltip for="deleteKeyBtn" position="top">Delete</paper-tooltip>
+        <paper-icon-button id="deleteKeyBtn" hidden$="[[!showDeleteOption]]" on-tap="_deleteSelected" icon="delete"></paper-icon-button>
       </div>
 
       <div class="card-content">
         <div hidden$="[[!hasKeys]]" class="info-list">
           <div class="info-head flex-horizontal-with-ratios">
             <div class="flexchild">
-              <paper-checkbox checked="[[selectAll]]" on-tap="_selectAllChanged">Νame</paper-checkbox>
+              <paper-checkbox checked="[[selectAll]]" on-tap="_selectAllChanged"></paper-checkbox>
+              Νame
+              <paper-icon-button icon="expand-more" on-tap="_sortKeys" sort-option="id"></paper-icon-button>
             </div>
-            <div class="flexchild">Default</div>
+            <div class="flexchild">Default
+              <paper-icon-button icon="expand-more" on-tap="_sortKeys" sort-option="default"></paper-icon-button>
+            </div>
           </div>
           <div class="info-body">
-            <iron-list items="[[filteredKeys]]" as="key" sort="_computeSort">
+            <iron-list items="[[sortedKeys]]" as="key">
               <template>
                 <key-item-element key="[[key]]"></key-item-element>
               </template>
@@ -57,7 +73,7 @@
       </div>
     </paper-card>
 
-    <array-selector id="selector" items="[[filteredKeys]]" selected="{{selectedKeys}}" multi toggle></array-selector>
+    <array-selector id="selector" items="[[sortedKeys]]" selected="{{selectedKeys}}" multi toggle></array-selector>
 
     <paper-fab id="addBtn" icon="add" on-tap="_openAddKeyModal"></paper-fab>
     <key-add-element></key-add-element>
@@ -81,6 +97,10 @@
           filteredKeys: {
             type: Array,
             computed: '_computeFilteredKeys(keys.*, searchTerm)'
+          },
+          sortedKeys: {
+            type: Array,
+            // computed: '_computeSortedKeys(filteredKeys.*, sortByTerm)'
           },
           selectedKey: {
             type: Object,
@@ -114,18 +134,20 @@
             type: String,
             value: '',
             notify: true
+          },
+          sortByTerm: {
+            type: String,
+            value: 'default'
           }
         },
         observers: [
-          '_keysChanged(keys.*, selectedKeys.*)'
+          '_keysChanged(keys.*, selectedKeys.*)',
+          '_filteredKeysChanged(filteredKeys.*, sortByTerm)'
         ],
         listeners: {
           'toggleSelectedKey': '_toggleSelectedKey',
           'addKey': '_addKey',
           'updateSelectedKey': '_updateSelectedKey'
-        },
-        _computeSort: function(a, b) {
-          return a.isDefault === b.isDefault ? 0 : (a.isDefault ? -1 : 1);
         },
         _computeFilteredKeys: function(keys, searchTerm) {
           var searchTerm = searchTerm.toLowerCase();
@@ -133,6 +155,35 @@
             var id = key.id.toLowerCase();
             return id.indexOf(searchTerm) != -1;
           });
+        },
+        _filteredKeysChanged: function(filteredKeys, sortByTerm) {
+          console.log(filteredKeys, sortByTerm);
+          var sortedKeys = [];
+          if (sortByTerm == 'id') {
+            console.log(sortByTerm);
+            sortedKeys = filteredKeys.base.sort(this._computeSort('id', 1));
+          } else if (sortByTerm == 'default') {
+            sortedKeys = filteredKeys.base.sort(this._computeSort('isDefault', -1));
+          } else {
+            console.log(sortByTerm);
+            sortedKeys = filteredKeys.base;
+          }
+          console.log(sortedKeys, filteredKeys);
+          this.set('sortedKeys', sortedKeys);
+          this.querySelector('iron-list').notifyResize();
+        },
+        _sortKeys: function(e) {
+          var sortByTerm = e.currentTarget.getAttribute('sort-option');
+          console.log(sortByTerm);
+          this.set('sortByTerm', sortByTerm);
+        },
+        _computeSort: function(property, order) {
+          return function(a, b) {
+            if (a[property] === b[property]) {
+              return 0;
+            }
+            return (order * (a[property] > b[property] ? 1 : -1));
+          };
         },
         _keysChanged: function(keys, selectedKeys) {
           this.set('showDeleteOption', selectedKeys.base.length > 0);
@@ -160,7 +211,7 @@
           this.set('selectAll', selectAll);
           [].forEach.call(els, function(el, index) {
             el.selected = selectAll;
-          }, this);
+          });
         },
         _toggleSelectedKey: function(e) {
           this.$.selector.select(e.detail.key);
@@ -179,6 +230,7 @@
             this.splice('keys', index, 1);
           }, this);
           this.$.selector.clearSelection();
+          console.log(this.selectedKeys, this.keys);
         },
         _starSelected: function(e) {
           var selectedKey = this.selectedKey;
