--- a/app/elements/scripts-list-element.html
+++ b/app/elements/scripts-list-element.html
@@ -37,7 +37,7 @@
         <div hidden$="[[!hasScripts]]" class="info-list">
           <div class="info-head flex-horizontal-with-ratios">
             <div class="flexchild">
-              <paper-checkbox checked="[[selectAll]]" on-tap="_selectAllChanged">Νame</paper-checkbox>
+              <paper-checkbox checked="[[selectAll]]" on-tap="_selectAllChanged"></paper-checkbox> Νame
             </div>
             <div class="flexchild">Type</div>
           </div>
