--- a/app/elements/tokens-list-element.html
+++ b/app/elements/tokens-list-element.html
@@ -36,7 +36,7 @@
         <div hidden$="[[!hasTokens]]" class="info-list">
           <div class="info-head flex-horizontal-with-ratios">
             <div class="flexchild">
-              <paper-checkbox checked="[[selectAll]]" on-tap="_selectAllChanged">Νame</paper-checkbox>
+              <paper-checkbox checked="[[selectAll]]" on-tap="_selectAllChanged"></paper-checkbox> Νame
             </div>
             <div class="flexchild">Last Accessed</div>
             <div class="flexchild"></div>
