--- a/app/elements/session-item-element.html
+++ b/app/elements/session-item-element.html
@@ -40,7 +40,7 @@
 
     <paper-item on-tap="_expandSession" class$="info-item flex-horizontal-with-ratios session-item [[indexClass]]">
       <div class="flexchild">
-        <paper-checkbox checked="{{selected}}" disabled$="[[isActive]]" on-tap="_selectSession">[[createdTimeText]]</paper-checkbox>
+        <paper-checkbox checked="{{selected}}" disabled$="[[isActive]]" on-tap="_selectSession"></paper-checkbox> [[createdTimeText]]
       </div>
       <div class="flexchild">[[accessedTimeText]]</div>
       <div class="flexchild text-center">
