--- a/app/elements/user-menu-element.html
+++ b/app/elements/user-menu-element.html
@@ -15,6 +15,7 @@
       .name {
         line-height: 44px;
         margin-right: 10px;
+        font-weight: 300;
       }
 
       gravatar-component >::content img {
