--- a/app/elements/script-edit-element.html
+++ b/app/elements/script-edit-element.html
@@ -15,37 +15,17 @@
       paper-dialog {
         width: 300px;
       }
-
-      paper-dialog paper-icon-button {
-        position: absolute;
-        margin: 0;
-        top: 18px;
-        right: 14px;
-      }
-
-      paper-dialog paper-button {
-        display: block;
-        margin: 20px 0 0;
-        background-color: #3f51b5;
-        color: #fff;
-      }
-
-      paper-dialog paper-button[disabled] {
-        background-color: #ccc;
-        color: #fff;
-        cursor: not-allowed;
-      }
     </style>
 
     <paper-dialog id="editScriptModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       <h2>Edit Script</h2>
-      <paper-icon-button icon="clear" on-tap="_closeEditScriptModal"></paper-icon-button>
+      <paper-icon-button class="close" icon="clear" on-tap="_closeEditScriptModal"></paper-icon-button>
       <paper-dialog-scrollable>
         <paper-input id="name" label="Name" error-message="Please enter script's name" value="{{script.name}}"></paper-input>
 
         <paper-textarea id="description" label="Description (optional)" rows="5" max-rows="5" error-message="Please enter script's description" value="{{script.description}}"></paper-textarea>
 
-        <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
+        <paper-button class="submit-btn btn-block" disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
       </paper-dialog-scrollable>
     </paper-dialog>
 
