--- a/app/elements/tokens-list-element.html
+++ b/app/elements/tokens-list-element.html
@@ -25,7 +25,7 @@
       }
     </style>
 
-    <paper-card heading="Active Tokens">
+    <paper-card heading="API Tokens">
       <div hidden$="[[!hasTokens]]" class="card-options">
         <paper-icon-button icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
         <paper-input hidden$="[[!showSearchOption]]" type="search" value="{{searchTerm}}" placeholder="Search..." no-label-float class="search"></paper-input>
