--- a/app/elements/cloud-add-element.html
+++ b/app/elements/cloud-add-element.html
@@ -13,10 +13,6 @@
         margin-bottom: 50px;
       }
 
-      paper-dropdown-menu {
-        display: block;
-      }
-
       iron-label {
         display: block;
       }
@@ -25,7 +21,7 @@
     <paper-card heading="Select Provider">
       <div class="card-content">
         <!-- <template is="dom-if" if="[[!provider]]"> -->
-        <paper-dropdown-menu label="Providers">
+        <paper-dropdown-menu class="dropdown-block" label="Providers">
           <paper-menu attr-for-selected="value" selected="{{provider}}" class="dropdown-content">
             <template is="dom-repeat" items="[[providersItems]]" as="provider">
               <paper-item value="[[provider]]">[[provider]]</paper-item>
@@ -52,7 +48,7 @@
           <template is="dom-repeat" items="[[providerFields]]" as="field">
             <paper-input placeholder="[[field.placeholder]]" label="[[field.label]]" value="[[field.defaultValue]]" required="[[field.required]]" error-message="[[field.errorMessage]]"></paper-input>
           </template>
-          <paper-button raised on-tap="_submitForm">Submit</paper-button>
+          <paper-button class="submit-btn" raised on-tap="_submitForm">Submit</paper-button>
         </template>
     </paper-card>
   </template>
