--- a/app/elements/feedback-page-element.html
+++ b/app/elements/feedback-page-element.html
@@ -12,22 +12,6 @@
         display: block;
       }
 
-      paper-button {
-        margin: 20px 0 0;
-        background-color: #3f51b5;
-        color: #fff;
-      }
-
-      paper-button[disabled] {
-        background-color: #ccc;
-        color: #fff;
-        cursor: not-allowed;
-      }
-
-      paper-dropdown-menu {
-        display: block;
-      }
-
       iron-label {
         display: block;
         margin-top: 20px;
@@ -48,7 +32,7 @@
 
           <paper-input label="What's your company's name?" required error-message="Please enter your company's name" value="{{user.companyName}}"></paper-input>
 
-          <paper-dropdown-menu label="Where is your business located?" horizontal-align="left">
+          <paper-dropdown-menu class="dropdown-block" label="Where is your business located?" horizontal-align="left">
             <paper-menu attr-for-selected="value" selected="{{user.country}}" class="dropdown-content">
               <template is="dom-repeat" items="[[countriesOptions]]" as="country">
                 <paper-item value="[[country]]">[[country]]</paper-item>
@@ -56,7 +40,7 @@
             </paper-menu>
           </paper-dropdown-menu>
 
-          <paper-dropdown-menu label="How many people work there?" horizontal-align="left">
+          <paper-dropdown-menu class="dropdown-block" label="How many people work there?" horizontal-align="left">
             <paper-menu attr-for-selected="value" selected="{{user.numberOfPeople}}" class="dropdown-content">
               <template is="dom-repeat" items="[[numberOfPeopleOptions]]" as="people">
                 <paper-item value="[[people]]">[[people]]</paper-item>
@@ -64,7 +48,7 @@
             </paper-menu>
           </paper-dropdown-menu>
 
-          <paper-dropdown-menu label="How many servers do you have?" horizontal-align="left">
+          <paper-dropdown-menu class="dropdown-block" label="How many servers do you have?" horizontal-align="left">
             <paper-menu attr-for-selected="value" selected="{{user.numberOfServers}}" class="dropdown-content">
               <template is="dom-repeat" items="[[numberOfServersOptions]]" as="servers">
                 <paper-item value="[[servers]]">[[servers]]</paper-item>
@@ -80,7 +64,7 @@
           <paper-input hidden$="[[!user.hasExtraHosted]]" label="Please specify where do you host your servers?" value="{{user.extraHosted}}"></paper-input>
 
           <div class="clearfix">
-            <paper-button class="pull-right" disabled$="[[!firstFormReady]]" raised on-tap="_pageChange" page="second">Next</paper-button>
+            <paper-button class="purple pull-right" disabled$="[[!firstFormReady]]" raised on-tap="_pageChange" page="second">Next</paper-button>
           </div>
           <p class="text-center">* All fields are considered to be mandatory</p>
         </div>
@@ -90,7 +74,7 @@
     <template is="dom-if" if="[[pageSecond]]">
       <paper-card heading="Feedback (Page 2 of 2)">
         <div class="card-content">
-          <paper-dropdown-menu label="How did you discover mist.io?" horizontal-align="left">
+          <paper-dropdown-menu class="dropdown-block" label="How did you discover mist.io?" horizontal-align="left">
             <paper-menu attr-for-selected="value" selected="{{user.discover}}" class="dropdown-content">
               <template is="dom-repeat" items="[[discoverOptions]]" as="discover">
                 <paper-item value="[[discover.val]]">[[discover.title]]</paper-item>
@@ -100,7 +84,7 @@
 
           <paper-input hidden$="[[!user.hasExtraDiscover]]" label="Please specify how you discover mist.io?" required error-message="Please specify how you discover mist.io" value="{{user.extraDiscover}}"></paper-input>
 
-          <paper-dropdown-menu label="How satisfied are you with mist.io?" horizontal-align="left">
+          <paper-dropdown-menu class="dropdown-block" label="How satisfied are you with mist.io?" horizontal-align="left">
             <paper-menu attr-for-selected="value" selected="{{user.satisfaction}}" class="dropdown-content">
               <template is="dom-repeat" items="[[satisfactionOptions]]" as="satisfaction">
                 <paper-item value="[[satisfaction.val]]">[[satisfaction.title]]</paper-item>
@@ -108,7 +92,7 @@
             </paper-menu>
           </paper-dropdown-menu>
 
-          <paper-dropdown-menu label="Have you considered using similar services?" horizontal-align="left">
+          <paper-dropdown-menu class="dropdown-block" label="Have you considered using similar services?" horizontal-align="left">
             <paper-menu attr-for-selected="value" selected="{{user.alternative}}" class="dropdown-content">
               <template is="dom-repeat" items="[[alternativeOptions]]" as="alternative">
                 <paper-item value="[[alternative.val]]">[[alternative.title]]</paper-item>
@@ -121,8 +105,8 @@
           <paper-textarea label="How can we improve mist.io to better meet your needs?" rows="5" value="{{user.improve}}"></paper-textarea>
 
           <div class="clearfix">
-            <paper-button class="pull-left" raised on-tap="_pageChange" page="first">Previous</paper-button>
-            <paper-button class="pull-right" disabled$="[[!secondFormReady]]" raised on-tap="_submitForm">Submit</paper-button>
+            <paper-button class="submit-btn pull-left" raised on-tap="_pageChange" page="first">Previous</paper-button>
+            <paper-button class="submit-btn pull-right" disabled$="[[!secondFormReady]]" raised on-tap="_submitForm">Submit</paper-button>
           </div>
           <p class="text-center">* All fields are considered to be mandatory</p>
         </div>
