--- a/app/elements/login-element.html
+++ b/app/elements/login-element.html
@@ -15,26 +15,6 @@
       paper-dialog {
         width: 300px;
       }
-
-      paper-dialog paper-icon-button {
-        position: absolute;
-        margin: 0;
-        top: 18px;
-        right: 14px;
-      }
-
-      paper-dialog paper-button {
-        display: block;
-        margin: 20px 0 0;
-        background-color: #3f51b5;
-        color: #fff;
-      }
-
-      paper-dialog paper-button[disabled] {
-        background-color: #ccc;
-        color: #fff;
-        cursor: not-allowed;
-      }
     </style>
 
     <paper-card heading="Login">
@@ -47,13 +27,13 @@
 
     <paper-dialog id="loginModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       <h2>Sign In</h2>
-      <paper-icon-button icon="clear" on-tap="_closeLoginModal"></paper-icon-button>
+      <paper-icon-button class="close" icon="clear" on-tap="_closeLoginModal"></paper-icon-button>
       <paper-dialog-scrollable>
         <paper-input id="email" name="email" type="email" label="Email" required error-message="Please enter a valid email address" value="{{user.email}}"></paper-input>
 
         <paper-input id="password" name="password" type="password" label="Password" required error-message="Please enter your password" value="{{user.password}}"></paper-input>
 
-        <paper-button id="submitBtn" type="submit" on-tap="_submitForm" disabled$="[[!formReady]]" raised>Submit</paper-button>
+        <paper-button class="submit-btn" type="submit" on-tap="_submitForm" disabled$="[[!formReady]]" raised>Submit</paper-button>
     </paper-dialog-scrollable>
     </paper-dialog>
 
@@ -116,7 +96,7 @@
           console.log(e);
         },
         _submitForm: function(e) {
-          
+
         },
         _modalClosed: function() {
           this._formReset();
