--- a/app/elements/password-element.html
+++ b/app/elements/password-element.html
@@ -11,25 +11,9 @@
       paper-card {
         display: block;
       }
-
-      paper-button {
-        margin: 20px 0 0;
-      }
-
-      paper-button {
-        margin: 20px 0 0;
-        background-color: #3f51b5;
-        color: #fff;
-      }
-
-      paper-button[disabled] {
-        background-color: #ccc;
-        color: #fff;
-        cursor: not-allowed;
-      }
     </style>
 
-    <paper-card heading="Password Reset">
+    <paper-card heading="Security">
       <div class="card-content">
         <template is="dom-if" if="[[user.hasPass]]">
           <paper-input label="Current Password" required error-message="Please enter your old password" value="{{user.currentPassword}}"></paper-input>
@@ -38,12 +22,12 @@
 
           <paper-input label="Confirm New Password" required error-message="Please enter your new password again" value="{{user.confirmNewPassword}}"></paper-input>
 
-          <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
+          <paper-button class="submit-btn" disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
         </template>
 
         <template is="dom-if" if="[[!user.hasPass]]">
           <div class="text-center">
-            <paper-button raised on-tap="_setPassword">Set Password</paper-button>
+            <paper-button class="submit-btn" raised on-tap="_setPassword">Set Password</paper-button>
             <p>* For security reasons, since you haven't specified a password before, an email will be sent to your email: "[[user.email]]" to guide you through the process</p>
           </div>
         </template>
@@ -63,12 +47,14 @@
         properties: {
           user: {
             type: Object,
-            value: {
-              currentPassword: null,
-              newPassword: null,
-              confirmNewPassword: null,
-              email: null,
-              hasPass: null
+            value: function() {
+              return {
+                currentPassword: null,
+                newPassword: null,
+                confirmNewPassword: null,
+                email: EMAIL,
+                hasPass: HAS_PASS
+              }
             },
             notify: true
           },
@@ -82,8 +68,7 @@
           }
         },
         ready: function() {
-          this.set('user.email', EMAIL);
-          this.set('user.hasPass', HAS_PASS);
+
         },
         _computeFormReady: function(currentPassword, newPassword, confirmNewPassword, sendingData) {
           var formReady = false;
