--- a/app/elements/register-element.html
+++ b/app/elements/register-element.html
@@ -15,30 +15,6 @@
       paper-dialog {
         width: 300px;
       }
-
-      paper-dialog paper-icon-button {
-        position: absolute;
-        margin: 0;
-        top: 18px;
-        right: 14px;
-      }
-
-      paper-dialog paper-button {
-        display: block;
-        margin: 20px 0 0;
-      }
-
-      paper-dialog paper-button {
-        margin: 20px 0 0;
-        background-color: #3f51b5;
-        color: #fff;
-      }
-
-      paper-dialog paper-button[disabled] {
-        background-color: #ccc;
-        color: #fff;
-        cursor: not-allowed;
-      }
     </style>
 
     <paper-card heading="Register">
@@ -53,13 +29,13 @@
 
     <paper-dialog id="registerModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
       <h2>Register</h2>
-      <paper-icon-button icon="clear" on-tap="_closeRegisterModal"></paper-icon-button>
+      <paper-icon-button class="close" icon="clear" on-tap="_closeRegisterModal"></paper-icon-button>
       <paper-dialog-scrollable>
         <paper-input id="name" label="Name" required error-message="Please enter your name" value="{{user.name}}"></paper-input>
 
         <paper-input id="email" type="email" label="Email" required error-message="Please enter a valid email address" value="{{user.email}}"></paper-input>
-        
-        <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
+
+        <paper-button class="submit-btn btn-block" disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
       </paper-dialog-scrollable>
     </paper-dialog>
 
