--- a/app/elements/script-add-element.html
+++ b/app/elements/script-add-element.html
@@ -11,22 +11,6 @@
       paper-card {
         display: block;
       }
-
-      paper-button {
-        margin: 20px 0 0;
-        background-color: #3f51b5;
-        color: #fff;
-      }
-
-      paper-button[disabled] {
-        background-color: #ccc;
-        color: #fff;
-        cursor: not-allowed;
-      }
-
-      paper-dropdown-menu {
-        display: block;
-      }
     </style>
 
     <paper-card heading="Add Script">
@@ -41,7 +25,7 @@
           </template>
 
           <template is="dom-if" if="[[_computeIsDropdown(field.type)]]">
-            <paper-dropdown-menu label="[[field.label]]" horizontal-align="left">
+            <paper-dropdown-menu class="dropdown-block" label="[[field.label]]" horizontal-align="left">
               <paper-menu attr-for-selected="value" class="dropdown-content">
                 <template is="dom-repeat" items="[[field.options]]" as="option">
                   <paper-item value="[[option.val]]">[[option.title]]</paper-item>
@@ -61,7 +45,7 @@
               </template>
 
               <template is="dom-if" if="[[_computeIsDropdown(optional.type, optional.requirement)]]">
-                <paper-dropdown-menu label="[[optional.label]]" horizontal-align="left">
+                <paper-dropdown-menu class="dropdown-block" label="[[optional.label]]" horizontal-align="left">
                   <paper-menu attr-for-selected="value" class="dropdown-content">
                     <template is="dom-repeat" items="[[optional.options]]" as="optionalOption">
                       <paper-item value="[[optionalOption.val]]">[[optionalOption.title]]</paper-item>
@@ -73,7 +57,7 @@
           </template>
         </template>
 
-        <paper-button disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
+        <paper-button class="submit-btn" disabled$="[[!formReady]]" raised on-tap="_submitForm">Add</paper-button>
       </div>
     </paper-card>
 
