--- a/app/elements/token-add-element.html
+++ b/app/elements/token-add-element.html
@@ -9,45 +9,20 @@
         width: 100%;
       }
 
-      paper-menu,
-      paper-dropdown-menu {
-        width: 100%;
-      }
-
       paper-dialog {
-        min-width: 300px;
-        position: relative;
-      }
-
-      paper-dialog paper-icon-button {
-        position: absolute;
-        margin: 0;
-        top: 18px;
-        right: 14px;
-      }
-
-      paper-dialog paper-button {
-        display: block;
-        margin: 20px 0 0;
-        background-color: #3f51b5;
-        color: #fff;
-      }
-
-      paper-dialog paper-button[disabled] {
-        background-color: #ccc;
-        color: #fff;
-        cursor: not-allowed;
+        width: 100%;
+        max-width: 300px;
       }
     </style>
 
     <paper-dialog id="addTokenModal" entry-animation="scale-up-animation" exit-animation="fade-out-animation" with-backdrop>
-      <h2>Create Token</h2>
-      <paper-icon-button icon="clear" on-tap="_closeAddTokenModal"></paper-icon-button>
+      <h2>[[modalTitle]]</h2>
+      <paper-icon-button class="close" icon="clear" on-tap="_closeAddTokenModal"></paper-icon-button>
       <paper-dialog-scrollable>
         <template is="dom-if" if="[[_computeFormStep(1, formStep)]]">
           <paper-input label="Unique Token Name" required error-message="Please enter a unique token name" value="{{token.name}}"></paper-input>
 
-          <paper-dropdown-menu label="Expires after" horizontal-align="left">
+          <paper-dropdown-menu class="dropdown-block" label="Expires after" horizontal-align="left">
             <paper-menu attr-for-selected="value" selected="{{token.expiration}}" class="dropdown-content">
               <template is="dom-repeat" items="[[expirationOptions]]" as="expiration">
                 <paper-item value="[[expiration.val]]">[[expiration.title]]</paper-item>
@@ -55,19 +30,27 @@
             </paper-menu>
           </paper-dropdown-menu>
 
-          <paper-button disabled$="[[!firstFormReady]]" raised on-tap="_submitFirstForm">Submit</paper-button>
+          <paper-button class="purple btn-block" disabled$="[[!firstFormReady]]" raised on-tap="_submitFirstForm">Create Token</paper-button>
         </template>
 
         <template is="dom-if" if="[[_computeFormStep(2, formStep)]]">
-          <paper-input type="password" label="Password" required error-message="Please enter your password" value="{{password}}"></paper-input>
+          <p class="text-center">Please re-enter your password for "[[user.email]]" to confirm the creation of the auth token.</p>
 
-          <paper-button disabled$="[[!secondFormReady]]" raised on-tap="_submitSecondForm">Submit</paper-button>
+          <paper-input type="password" label="Password" required error-message="Please enter your password" value="{{user.password}}"></paper-input>
+
+          <paper-button class="purple btn-block" disabled$="[[!secondFormReady]]" raised on-tap="_submitSecondForm">Submit Password</paper-button>
         </template>
 
         <template is="dom-if" if="[[_computeFormStep(3, formStep)]]">
-          <p class="text-center">
-            This is new token section!
-          </p>
+          <p class="text-center">Grab your token below. This is the last time that it will be visible to anybody.</p>
+
+          <paper-textarea label="Token" value="{{token.token}}" rows="3" max-rows="3"></paper-textarea>
+        </template>
+
+        <template is="dom-if" if="[[_computeFormStep(4, formStep)]]">
+          <p class="text-center">In order to create a token you have to submit a password for your account and come back afterwards.</p>
+
+          <paper-button class="submit-btn btn-block" raised on-tap="_submitFourthForm">Set Password</paper-button>
         </template>
       </paper-dialog-scrollable>
     </paper-dialog>
@@ -85,17 +68,21 @@
         properties: {
           token: {
             type: Object,
-            value: function() {
-              return {
-                name: null,
-                expiration: null
-              }
+            value: {
+              name: null,
+              expiration: null
             },
             notify: true
           },
-          password: {
-            type: String,
-            value: ''
+          user: {
+            type: Object,
+            value: function() {
+              return {
+                email: EMAIL,
+                password: null,
+                hasPass: HAS_PASS
+              }
+            }
           },
           tokens: {
             type: Array
@@ -106,7 +93,13 @@
           },
           formStep: {
             type: Number,
-            value: 1
+            value: function() {
+              return HAS_PASS ? 1 : 4;
+            }
+          },
+          modalTitle: {
+            type: String,
+            computed: '_computeModalTitle(formStep)'
           },
           expirationOptions: {
             type: Array,
@@ -133,13 +126,16 @@
           },
           secondFormReady: {
             type: Boolean,
-            computed: '_computeSecondFormReady(password)'
+            computed: '_computeSecondFormReady(user.password)'
           },
           sendingData: {
             type: Boolean,
             value: false
           }
         },
+        observers: [
+          '_formStepChanged(formStep, user.hasPass)'
+        ],
         listeners: {
           'iron-overlay-closed': '_modalClosed'
         },
@@ -147,11 +143,11 @@
 
         },
         _computeTokensNames: function(tokens) {
-          var names = tokens.base.map(function(token) {
+          var tokensNames = tokens.base.map(function(token) {
             return token.name
           });
 
-          return names;
+          return tokensNames;
         },
         _computeFirstFormReady: function(name, expiration, tokensNames) {
           var formReady = false;
@@ -178,6 +174,23 @@
         _computeFormStep: function(step, formStep) {
           return step == formStep;
         },
+        _formStepChanged: function(formStep, hasPass) {
+          if (hasPass) {
+            this.set('formStep', formStep || 1);
+          } else {
+            this.set('formStep', 4);
+          }
+        },
+        _computeModalTitle: function(formStep) {
+          var titles = [
+            'Create Token',
+            'Verify Password',
+            'Token Created',
+            'Invalid Access'
+          ];
+
+          return titles[formStep - 1];
+        },
         _openAddTokenModal: function() {
           this.$.addTokenModal.open();
         },
@@ -192,27 +205,31 @@
         _formReset: function() {
           this.set('token.name', null);
           this.set('token.expiration', null);
-          this.set('password', null);
+          this.set('user.password', null);
           this.set('formStep', 1);
         },
         _submitFirstForm: function(e) {
           this.set('formStep', 2);
         },
+        _submitFourthForm: function(e) {
+          console.log('take me to password section');
+        },
         _submitSecondForm: function(e) {
           this.set('formStep', 3);
+          this.set('token', {
+            token: "be9e...",
+            name: this.token.name,
+            last_accessed_at: "2016-02-03 10:14:28.599000",
+            ttl: 0,
+            created_at: "2015-12-22 15:46:26.643000",
+            ip_address: "94.69.102.20",
+            id: "568159523260490d7461e63c",
+            user_agent: "python-requests/2.7.0 CPython/2.7.10 Darwin/14.5.0"
+          })
 
           // Push new token int the tokens list
           this.fire('addToken', {
-            token: {
-              token: "be9e...",
-              name: this.token.name,
-              last_accessed_at: "2016-02-03 10:14:28.599000",
-              ttl: 0,
-              created_at: "2015-12-22 15:46:26.643000",
-              ip_address: "94.69.102.20",
-              id: "568159523260490d7461e63c",
-              user_agent: "python-requests/2.7.0 CPython/2.7.10 Darwin/14.5.0"
-            }
+            token: this.token
           });
 
           // Show a notification
