--- a/app/elements/key-edit-element.html
+++ b/app/elements/key-edit-element.html
@@ -23,7 +23,7 @@
       <paper-dialog-scrollable>
         <paper-input id="name" label="Name" required error-message="Please enter key's name" value="{{key.id}}"></paper-input>
 
-        <paper-button class="submit-btn" disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
+        <paper-button class="submit-btn btn-block" disabled$="[[!formReady]]" raised on-tap="_submitForm">Submit</paper-button>
       </paper-dialog-scrollable>
     </paper-dialog>
 
