run script element

--- a/app/elements/feedback-page-element.html
+++ b/app/elements/feedback-page-element.html
@@ -24,7 +24,7 @@
     </style>
 
     <template is="dom-if" if="[[!pageSecond]]">
-      <paper-card heading="Feedback (Page 1 of 2)">
+      <paper-card elevation="2" heading="Feedback (Page 1 of 2)">
         <div class="card-content">
           <paper-input label="What's your first name?" required error-message="Please enter your first name" value="{{user.firstName}}"></paper-input>
 
