--- a/app/elements/keys-list-element.html
+++ b/app/elements/keys-list-element.html
@@ -26,7 +26,7 @@
       }
     </style>
 
-    <paper-card heading="Keys">
+    <paper-card elevation="2" heading="Keys">
       <div hidden$="[[!hasKeys]]" class="card-options">
         <paper-tooltip for="searchKeyBtn" position="top">Toggle Search</paper-tooltip>
         <paper-icon-button id="searchKeyBtn" icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
