--- a/app/elements/login-element.html
+++ b/app/elements/login-element.html
@@ -33,7 +33,7 @@
 
         <paper-input id="password" name="password" type="password" label="Password" required error-message="Please enter your password" value="{{user.password}}"></paper-input>
 
-        <paper-button class="submit-btn" type="submit" on-tap="_submitForm" disabled$="[[!formReady]]" raised>Submit</paper-button>
+        <paper-button class="submit-btn btn-block" type="submit" on-tap="_submitForm" disabled$="[[!formReady]]" raised>Submit</paper-button>
     </paper-dialog-scrollable>
     </paper-dialog>
 
