--- a/app/elements/scripts-list-element.html
+++ b/app/elements/scripts-list-element.html
@@ -25,7 +25,11 @@
       <div hidden$="[[!hasScripts]]" class="card-options">
         <paper-icon-button icon="search" on-tap="_toggleSearchSelected"></paper-icon-button>
         <paper-input hidden$="[[!showSearchOption]]" type="search" value="{{searchTerm}}" placeholder="Search..." no-label-float class="search"></paper-input>
+
+        <paper-icon-button hidden$="[[!showRunOption]]" on-tap="_runSelected" icon="schedule"></paper-icon-button>
+
         <paper-icon-button hidden$="[[!showEditOption]]" on-tap="_editSelected" icon="image:edit"></paper-icon-button>
+
         <paper-icon-button hidden$="[[!showDeleteOption]]" on-tap="_deleteSelected" icon="delete"></paper-icon-button>
       </div>
 
@@ -56,6 +60,7 @@
 
     <paper-fab id="addBtn" icon="add" on-tap="_openAddScriptModal"></paper-fab>
     <script-edit-element script="[[selectedScript]]"></script-edit-element>
+    <script-run-element script="[[selectedScript]]"></script-run-element>
   </template>
 
   <script>
@@ -89,6 +94,10 @@
             value: false
           },
           showEditOption: {
+            type: Boolean,
+            value: false
+          },
+          showRunOption: {
             type: Boolean,
             value: false
           },
@@ -128,6 +137,8 @@
           this.set('showDeleteOption', selectedScripts.base.length > 0);
 
           this.set('selectedScript', selectedScripts.base.length == 1 ? selectedScripts.base[0] : null);
+
+          this.set('showRunOption', selectedScripts.base.length == 1);
 
           this.set('showEditOption', selectedScripts.base.length == 1);
 
@@ -171,6 +182,10 @@
         _editSelected: function(e) {
           var el = Polymer.dom(this.root).querySelector('script-edit-element');
           el._openEditScriptModal();
+        },
+        _runSelected: function(e) {
+          var el = Polymer.dom(this.root).querySelector('script-run-element');
+          el._openRunScriptModal();
         },
         _updateSelectedScript: function(e) {
           var script = e.detail.script,
