add basic templates layouts

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -102,6 +102,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="subscription-item-element.html">
 <link rel="import" href="sessions-list-element.html">
 <link rel="import" href="session-item-element.html">
+<link rel="import" href="templates-list-element.html">
+<link rel="import" href="template-item-element.html">
+<link rel="import" href="template-add-element.html">
 <link rel="import" href="tokens-list-element.html">
 <link rel="import" href="token-item-element.html">
 <link rel="import" href="token-add-element.html">
